fix: stop re-spelled expressions from reading as changes
The same expression written with different spacing, in a different letter
case or with a differently spelled type compared as a change. A project
compared against the database it was exported from therefore produced a
migration that changed nothing, and the difference came back on the next
run because applying the statement does not alter how the catalog spells it.

Every affected expression now carries a normalized twin used only for the
comparison, while the text a statement is written from stays exactly as its
author wrote it. This covers index predicates and index column expressions,
CHECK constraints on tables and on domains, EXCLUDE predicates, extended
statistics expressions, trigger WHEN conditions, rule conditions, column and
domain defaults, row policy USING and WITH CHECK clauses, and on the
ClickHouse side the engine clauses, dictionary options and policy filters.

An expression that fails to parse is the opposite problem and needs the
opposite answer: an empty normalized half compares equal to the absence of
the expression, so an unreadable expression must keep its raw text and be
compared on that. The same reasoning keeps a ClickHouse policy filter that
fails to parse.

Two generation defects found alongside are fixed here as well: a constraint
with an empty column list and a primary key that adopts an existing index no
longer regenerate as invalid SQL, and such a primary key is no longer lost
from the model altogether.

Measured on a 22386-file project compared against itself: the script stays
empty and the cost of normalization does not exceed 3% of a full load.